RESOLVED FIXED153365
AX: Crash in setTextMarkerDataWithCharacterOffset
https://bugs.webkit.org/show_bug.cgi?id=153365
Summary AX: Crash in setTextMarkerDataWithCharacterOffset
Nan Wang
Reported 2016-01-22 11:55:31 PST
We should add a null check for the accessibilityObject in setTextMarkerDataWithCharacterOffset.
Attachments
patch (4.64 KB, patch)
2016-01-22 12:03 PST, Nan Wang
no flags
Nan Wang
Comment 1 2016-01-22 11:55:42 PST
Nan Wang
Comment 2 2016-01-22 12:03:47 PST
WebKit Commit Bot
Comment 3 2016-01-22 12:53:42 PST
Comment on attachment 269597 [details] patch Clearing flags on attachment: 269597 Committed r195468: <http://trac.webkit.org/changeset/195468>
WebKit Commit Bot
Comment 4 2016-01-22 12:53:46 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.