AX: Crash in setTextMarkerDataWithCharacterOffset https://bugs.webkit.org/show_bug.cgi?id=153365 <rdar://problem/24287924>

Reviewed by Chris Fleizach.

Source/WebCore:

Sometimes when we try to create a text marker range from a stale text marker with a removed
node, it will cause crash. Fixed it by adding a null check for the AccessibilityObject we
create in setTextMarkerDataWithCharacterOffset.

Test: accessibility/text-marker/text-marker-range-with-removed-node-crash.html

* accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::setTextMarkerDataWithCharacterOffset):

LayoutTests:

* accessibility/text-marker/text-marker-range-with-removed-node-crash-expected.txt: Added.
* accessibility/text-marker/text-marker-range-with-removed-node-crash.html: Added.


Canonical link: https://commits.webkit.org/171434@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195468 268f45cc-cd09-0410-ab3c-d52691b4dbfc